--- a/.github/workflows/assignment3.yml
+++ b/.github/workflows/assignment3.yml
@@ -8,6 +8,9 @@ jobs:
       - name: log of start workflow time
         run: echo -e "$(date -Iminutes)\nAdi Ben Zion, Noa Benborhoum\n" > /tmp/log.txt
 
+      - name: Print Log File Contents # for check 
+        run: cat /tmp/log.txt # for check 
+
       - name: Checkout
         uses: actions/checkout@v4
 
@@ -50,13 +53,14 @@ jobs:
   test:
     needs: build
     runs-on: ubuntu-latest
-    services:
+    services: # didnt do it
       mongodb:
         image: mongo
         ports:
           - 27017:27017
     steps:
-
+      - name: Checkout
+        uses: actions/checkout@v4
         #    1. download image and run it in a container
 
       - name: Download books artifact
@@ -81,8 +85,8 @@ jobs:
         run: docker image ls
 
       - name: Run Docker Compose
+        if: success()
         run: docker-compose up -d
-        working-directory: ${{ github.workspace }}
 
       - name: Wait for application to start
         run: sleep 10
@@ -90,10 +94,8 @@ jobs:
       - name: Check container is running
         run: |
           if [[ $(docker ps --filter "status=running" --filter "name=books" | wc -l) -ge 2 ]]; then
-            echo "Books service is running."
             echo "Container up and running" >> /tmp/log.txt
           else
-            echo "Books service is not running."
             echo "Container failed to run" >> /tmp/log.txt
             exit 1
           fi
@@ -102,9 +104,6 @@ jobs:
         run: cat /tmp/log.txt #this is for check only
 
             #     2. set up python and pytest environment
-
-      - name: Checkout
-        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v4
