--- a/.github/workflows/assignment3.yml
+++ b/.github/workflows/assignment3.yml
@@ -147,7 +147,7 @@ jobs:
         with:
           name: log
           path: /tmp/log.txt
-          #overwrite: true ???
+          overwrite: true
           #if we need to add a shutdown to the docker compose it's here
       
   query:
