--- a/.github/workflows/assignment3.yml
+++ b/.github/workflows/assignment3.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Build and export
         uses: docker/build-push-action@v5
         with:
-          context: ../books #we added a dot
+          context: ./books
           tags: books:latest
           outputs: type=docker,dest=/tmp/image.tar
 
