--- a/.github/workflows/assignment3.yml
+++ b/.github/workflows/assignment3.yml
@@ -80,7 +80,7 @@ jobs:
 
       - name: Run Docker Compose
         if: success()
-        run: docker-compose up -d
+        run: docker-compose up -d || true
 
       - name: Wait for application to start
         if: success()
@@ -100,11 +100,13 @@ jobs:
         run: cat /tmp/log.txt #this is for check only
 
       - name: Set up Python
+        if: success()
         uses: actions/setup-python@v4
         with:
           python-version: 3.9
 
       - name: Install dependencies
+        if: success()
         run: |
           python -m pip install --upgrade pip
           pip install pytest
@@ -112,6 +114,7 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Test with pytest
+        if: success()
         run: |
           cd tests
           pytest -v assn3_tests.py > assn3_test_results.txt
