--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "27017:27017"
 
   books:
-    build: ./booksssss # ???????
+    build: ./books
     restart: always
     volumes:
       - type: bind
