--- a/.github/workflows/assignment3.yml
+++ b/.github/workflows/assignment3.yml
@@ -85,7 +85,7 @@ jobs:
         run: sleep 10
 
       - name: Check container is running
-        id: check_containers
+        if: success()
         run: |
           if docker ps --filter "name=books" --filter "status=running" | grep books; then
             echo "containers_running=true" >> $GITHUB_ENV
