--- a/.github/workflows/assignment3.yml
+++ b/.github/workflows/assignment3.yml
@@ -93,6 +93,7 @@ jobs:
           else
             echo "containers_running=false" >> $GITHUB_ENV
             echo "Container failed to run" >> /tmp/log.txt
+            exit 1
           fi
 
       - name: Print log file contents #this is for check only
