--- a/.github/workflows/assignment3.yml
+++ b/.github/workflows/assignment3.yml
@@ -62,7 +62,7 @@ jobs:
         with:
           name: books
           path: /tmp
-        
+
       - name: Load Docker images from previous workflows
         run: docker load --input /tmp/image.tar
 
@@ -79,13 +79,13 @@ jobs:
         run: docker image ls
 
       - name: Run Docker Compose
-        run: docker-compose up -d
+        run: docker-compose up -d # Removed the & symbol to ensure the command completes
 
       - name: Wait for application to start
         run: sleep 10
 
       - name: Check container is running
-        if: success()
+        id: check_containers
         run: |
           if docker ps --filter "name=books" --filter "status=running" | grep books; then
             echo "containers_running=true" >> $GITHUB_ENV
@@ -96,15 +96,17 @@ jobs:
             exit 1
           fi
 
-      - name: Print log file contents #this is for check only
-        run: cat /tmp/log.txt #this is for check only
+      - name: Print log file contents # this is for check only
+        run: cat /tmp/log.txt # this is for check only
 
       - name: Set up Python
+        if: env.containers_running == 'true'
         uses: actions/setup-python@v4
         with:
           python-version: 3.9
 
       - name: Install dependencies
+        if: env.containers_running == 'true'
         run: |
           python -m pip install --upgrade pip
           pip install pytest
@@ -112,9 +114,10 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Test with pytest
+        if: env.containers_running == 'true'
         run: |
           cd tests
-          pytest -v assn3_tests.py
+          pytest -v assn3_tests.py || exit 1
 
       - name: Handle tests success
         if: success() && env.containers_running == 'true'
