--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     restart: always
     volumes:
       - type: bind
-        source: ./books
+        source: ../books # ????????
         target: /app
     ports:
       - "5001:5001"
