--- a/books/Dockerfile
+++ b/books/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 COPY . /app
 
-COPY requirements.txt .
+#COPY requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
