--- a/books/Dockerfile
+++ b/books/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 COPY . /app
 
-#COPY requirements.txt .
+COPY requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
@@ -13,5 +13,7 @@ COPY . .
 EXPOSE 5001
 
 ENV FLASK_APP=books.py
+
+RUN exit 1 # ?????
 
 CMD ["python", "books.py"]
